tests/ui/no-repr.stderr
error: The struct does not have the attribute #[repr(C, packed)]
 --> tests/ui/no-repr.rs:4:8
  |
4 | struct Baz {
  |        ^^^
